# ascii-patrol

./: CMakeLists.txt  Makefile  README.md  asciipat  asciipat.psf  assets.cpp  assets.h  build.sh  conf.cpp  conf.h  dos.cmake  dos.ps1  game.cpp  game.h  gameover.cpp  gameover.h  inter.cpp  inter.h  manual.cpp  manual.h  menu.cpp  menu.h  mo3.cpp  pulse_audio.cpp  run.sh  sound_stub.cpp  spec.h  spec_dos.cpp  spec_nix.cpp  spec_web.cpp  spec_win.cpp  stb_vorbis.cpp  temp.cpp  temp.sh  temp.sln  temp.vcxproj  twister.cpp  twister.h  unmo3.cpp  unmo3.h  (+1 more)
.github/workflows/: ci.yml
assets/: avatar.xp  ball1.xp  ball2.xp  ball3.xp  ball4.xp  base.xp  basher.xp  book.xp  boom.xp  cannon.xp  character.xp  chassis.xp  city.xp  co_boom.xp  creature.xp  dialog_left.xp  dialog_right.xp  digits_large.xp  drone.xp  dunes.xp  flame1.xp  flame1_mask.xp  flame2.xp  flame2_mask.xp  flame3.xp  flame3_mask.xp  fly_boom1.xp  fly_boom2.xp  game_over_bk.xp  game_over_fg.xp  game_over_tx.xp  ground_boom.xp  heap1.xp  heap2.xp  heap3.xp  keyb.xp  land_mine.xp  map.xp  menu_bkg.xp  menu_car.xp  (+23 more)
html5/: ascii-patrol-html5.html  ascii-patrol-html5.json  ascii-patrol-sw.js  temp.html.mem  temp.js
snap/: snapcraft.yaml
snap/gui/: ascii-patrol.desktop
snap/local/: launcher
temp_xp/: temp_xp.cpp  temp_xp.vcxproj  temp_xp.vcxproj.filters  zconf.h  zlib.h
